[BUG #6829] Handle visibility on form rows

--- a/framework/source/resource/qx/mobile/less/basic/_form.less
+++ b/framework/source/resource/qx/mobile/less/basic/_form.less
@@ -105,3 +105,8 @@ textarea {
   padding-top:0px;
 }
 
+// If one row is excluded: hide its separationRow
+.formRowContent.exclude + .formSeparationRow {
+  border-top:0;
+}
+
